--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -1,52 +1,41 @@
-name: DickyRDP
+name: RDP_Dicky
 
 on: workflow_dispatch
 
 jobs:
-
   build:
 
     runs-on: windows-latest
-
     timeout-minutes: 9999
 
     steps:
-
-    - name: Download Ngrok.
-
+    - name: Download Ngrok & NSSM
       run: |
-        Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/Zakybotz/Rdp-Free/master/start.bat -OutFile start.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/Zakybotz/Rdp-Free/master/wallpaper.bat -OutFile wallpaper.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/Zakybotz/Rdp-Free/master/loop.bat -OutFile loop.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/Zakybotz/Rdp-Free/master/start.bat -OutFile push.bat
-    - name: Extract Ngrok File.
-
-      run: Expand-Archive ngrok.zip
-
-    - name: Connect Ngrok.
-
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-
+        Invoke-WebRequest https://raw.githubusercontent.com/c9ffin/rdp/master/Files/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/c9ffin/rdp/master/Files/nssm.exe -OutFile nssm.exe
+    - name: Copy NSSM & Ngrok to Windows Directory.
+      run: | 
+        copy nssm.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
+    - name: Connect your NGROK account
+      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
-
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    - name: Windows10 RDP.
-
+    - name: Download Important Files.
       run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/c9ffin/rdp/master/Files/NGROK-US.bat -OutFile NGROK-US.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/c9ffin/rdp/master/Files/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/c9ffin/rdp/master/Files/loop.bat -OutFile loop.bat
+    - name: Make YML file for NGROK.
+      run: start NGROK-US.bat
+    - name: Enable RDP Access.
+      run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-        copy wallpaper.bat D:\a\wallpaper.bat
-    - name: Tunnel.
-
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp --region ap 3389"'
-
-    - name: Connect RDP.
-
-      run: cmd /c start.bat
-
-    - name: win10 RDP.
-
-      run: cmd /c loop.bat
+    - name: Create Tunnel
+      run: sc start ngrok
+    - name: Connect to your RDP 2core-7GB Ram.
+      run: cmd /c NGROK-CHECK.bat
+    - name: All Done! Join my TeleGram Channel for more tricks.
+      run: cmd /c loop.bat 
